--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,19 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
 # Keep the connection alive if idle for a long time (needed in production)
 #spring.datasource.testWhileIdle=true
 #spring.datasource.validationQuery=SELECT 1
-server.port=8080
+server.port=8085
 #spring.main.allow-circular-references=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
